add zero and cross img

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- <div class="container"> -->
-        <div id="gameContainer"></div>
+        <div id="gameCon"></div>
     <!-- </div> -->
     
     <script src="./js/functions/createMap.js"></script>
