add const MAP and add block id

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="gameCon"></div>
     <!-- </div> -->
     
+    <script src="./js/constant.js"></script>
     <script src="./js/functions/createMap.js"></script>
     <script src="./js/preload.js"></script>
     <script src="./js/create.js"></script>
