remove files, add text to beginGameScene

--- a/index.html
+++ b/index.html
@@ -12,16 +12,11 @@
         <div id="gameCon"></div>
     <!-- </div> -->
     
-    <script src="./js/constant.js"></script> <!--1 -->
-    <script src="./js/functions/createMap.js"></script> <!--2 -->
+    <script src="./js/constant.js"></script> 
+    <script src="./js/functions/createMap.js"></script> 
     <script src="./js/scenes/gameBeginScene.js"></script>
     <script src="./js/scenes/gameScene.js"></script>
-    <!-- 
-    <script src="./js/preload.js"></script> 
-    <script src="./js/create.js"></script> 
-    <script src="./js/update.js"></script> 
-    -->
-    <script src="./js/game.js"></script> <!--7 -->
+    <script src="./js/game.js"></script> 
     
 </body>
 </html>
