--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
     <!-- </div> -->
     
     <script src="./js/constant.js"></script> 
+
     <script src="./js/functions/createMap.js"></script> 
+    <script src="./js/functions/clearMap.js"></script> 
+
     <script src="./js/scenes/gameBeginScene.js"></script>
     <script src="./js/scenes/gameScene.js"></script>
+    <script src="./js/scenes/winScene.js"></script>
+    <script src="./js/scenes/loseScene.js"></script>
+
     <script src="./js/game.js"></script> 
     
 </body>
