add robot class

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <script src="./js/functions/createMap.js"></script> 
     <script src="./js/functions/clearMap.js"></script> 
+    <script src="./js/functions/robot.js"></script> 
 
     <script src="./js/scenes/gameBeginScene.js"></script>
     <script src="./js/scenes/gameScene.js"></script>
