add reranderMap fun, add gameSixty scene

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <script src="./js/functions/clearMap.js"></script> 
     <script src="./js/functions/robot.js"></script> 
     <script src="./js/functions/finder.js"></script> 
+    <script src="./js/functions/reranderMap.js"></script> 
 
     <script src="./js/scenes/gameBeginScene.js"></script>
     <script src="./js/scenes/gameScene.js"></script>
+    <script src="./js/scenes/gameSixty.js"></script>
     <script src="./js/scenes/winScene.js"></script>
     <script src="./js/scenes/loseScene.js"></script>
 
