add grawOldMap fun, change reranderMap

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <script src="./js/functions/clearMap.js"></script> 
     <script src="./js/functions/robot.js"></script> 
     <script src="./js/functions/finder.js"></script> 
+    <script src="./js/functions/drawOldMap.js"></script>
     <script src="./js/functions/reranderMap.js"></script> 
+
 
     <script src="./js/scenes/gameBeginScene.js"></script>
     <script src="./js/scenes/gameScene.js"></script>
